--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -1,8 +1,8 @@
 ---
 params:
-  group_name: "sim1"
-  merged_sce: "../results/scib_simulated/merged_sce/sim1_merged_sce.rds"
-  integrated_sce: "../results/scib_simulated/integrated_sce/sim1_integrated_fastmnn_sce.rds"
+  group_name: "HumanBrainSubstantiaNigra"
+  merged_sce: "../results/human_cell_atlas/merged_sce/HumanBrainSubstantiaNigra_merged_sce.rds"
+  integrated_sce: "../results/human_cell_atlas/integrated_sce/HumanBrainSubstantiaNigra_integrated_fastmnn_sce.rds"
   integration_method: "fastmnn"
   batch_column: "batch"
   celltype_column: "celltype"
@@ -191,6 +191,7 @@ batch_ari_df <- dplyr::bind_rows(batch_ari_unintegrated, batch_ari_integrated)
 
 ```{r}
 head(batch_ari_df)
+
 ```
 ### Batch ASW
 
@@ -213,6 +214,8 @@ batch_asw_df <- dplyr::bind_rows(batch_asw_unintegrated, batch_asw_integrated)
 
 ```{r}
 head(batch_asw_df)
+
+plot_batch_asw(batch_asw_df, seed = params$seed)
 ```
 
 ### kBET 
