--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -17,7 +17,7 @@ params:
   seed: 2022
   date: !r Sys.Date()
 
-title: "`r glue::glue('Integration evaluation for {params$group_name} with {params$integration_method}')`"
+title: "`r glue::glue('Integration evaluation for {params$group_name}')`"
 author: "CCDL"
 date: "`r params$date`"
 output: 
@@ -86,8 +86,14 @@ integrated_sce_files <- list.files(params$integrated_sce_dir,
                                    full.names = TRUE)
 
 # extract integration methods for project from list of possible methods based on files that exist
-methods <- paste(c("fastmnn", "scvi", "harmony", "scanorama", "cca", "rpca"), collapse = "|")
-integration_methods <- stringr::str_extract(integrated_sce_files, methods)
+expected_methods <- c("fastmnn", "scvi", "harmony", "scanorama", "cca", "rpca")
+expected_methods_check <- paste(expected_methods, collapse = "|")
+integration_methods <- stringr::str_extract(integrated_sce_files, expected_methods_check)
+
+# check to make sure all integration methods are accounted for and have an associated file
+if( !identical(sort(integration_methods), sort(expected_methods))){
+  stop("All integration files are not present in provided `integrated_sce_dir`.")
+}
 
 # construct a list of all sce files for reading in merged + integrated files together
 all_sce_files <- c(merged_sce_path, integrated_sce_files)
@@ -131,7 +137,11 @@ check_umap_name <- function(sce,
   
   if(!umap_name %in% reducedDimNames(sce)){
     missing_umap <- umap_name
+  } else {
+    missing_umap <- NULL
   }
+  
+  return(missing_umap)
 }
 
 missing_umap <- purrr::imap(sce_list, check_umap_name) %>%
