--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -156,7 +156,7 @@ if(!is.null(missing_umap)){
 
 ## UMAPs
 
-```{r batch-umaps, fig.height=15, fig.width=10}
+```{r batch-umaps, fig.height=15, fig.width=10, warning=FALSE}
 # create umap plots labeling by batch column
 batch_umaps <- names(sce_list) %>%
   purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
@@ -166,7 +166,7 @@ batch_umaps <- names(sce_list) %>%
 gridExtra::grid.arrange(grobs = batch_umaps, ncol = 2)
 ```
 
-```{r celltype-umaps, fig.width=15, fig.height=20}
+```{r celltype-umaps, fig.width=15, fig.height=20, warning=FALSE}
 # create umap plots labeling by celltype column
 celltype_umaps <- names(sce_list) %>%
   purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
@@ -222,7 +222,7 @@ k_range <- seq(params$ari_k_min,
 ```
 
 
-```{r}
+```{r, warning=FALSE}
 # calculate batch ARI for unintegrated and integrated SCE separately
 batch_ari_unintegrated <- calculate_batch_ari(merged_sce,
                                               seed = params$seed,
@@ -314,7 +314,7 @@ head(kbet_df)
 
 ### PCA Regression
 
-```{r}
+```{r, warning=FALSE}
 # calculate PCA regression for unintegrated and integrated SCE separately
 pca_unintegrated <- calculate_pca_regression(merged_sce,
                                              batch_column = params$batch_column,
