--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -249,7 +249,7 @@ head(batch_ari_df)
 Below we look at the batch average silhouette width (AWS) across integration methods.
 Silhouette width is used to assess consistency within clusters and measures how well a given data point adheres to its own cluster vs. other clusters.
 The batch silhouette width, averaged across analysis replicates, therefore measures to what extent a given data point is adheres to its batch group, which is not desired after integration.
-Therefore, a well-integrated dataset would show lower batch ASW values compared to an unintegrated or poorly-integrated dataset, because clustering post-integration should not be primarily dictated by batch. 
+Therefore, a well-integrated dataset would show lower batch ASW values compared to an unintegrated or poorly-integrated dataset, because batches should not primarily determine clustering after successful integration.
 
 ```{r}
 # calculate batch ASW for unintegrated and integrated SCE separately
