--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -210,9 +210,10 @@ head(ilisi_df)
 
 The below plot looks at the batch adjusted rand index (ARI) for each integration method. 
 Cells are first downsampled to 80% of the total number of cells before clustering is performed using k-means clustering. 
-The ARI between clustering results and batch assignments is then calculated and then this is repeated 20 times. 
+The ARI between clustering results and batch assignments is then calculated and this is repeated 20 times. 
 We also calculated batch ARI across a range of k for k-means, the number of centers used for clustering. 
-The plots show the batch ARI on the y-axis across each integration method indicated on the y-axis and are facted by the value of k used for k-means clustering.
+The plots show the batch ARI on the y-axis across each integration method and value of k used for k-means clustering.
+The first plot shows the integration method on the x-axis and plots are faceted by values of k, while the second plot shows each integration method as a separate plot and displays batch ARI across the range of k indicated on the x-axis.
 If datasets are well integrated we would anticipate the batch ARI to be close to 0 and the 1-batch ARI to be close to 1, indicating that batches are well integrated across clustering assignments and low concordance between clusters and batch assignment. 
 
 
@@ -251,8 +252,15 @@ batch_ari_df <- dplyr::bind_rows(batch_ari_unintegrated, batch_ari_integrated_li
 ```
 
 ```{r}
-plot_batch_ari(batch_ari_df)
+plot_batch_ari(batch_ari_df, 
+               facet_group = "k")
 ```
+```{r}
+plot_batch_ari(batch_ari_df, 
+               facet_group = "integration_method")
+```
+
+
 ### Batch ASW
 
 ```{r}
