--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -267,7 +267,8 @@ batch_asw_integrated_list <- integration_methods %>%
                                     integration_method = .x))
 
 # create combined DF
-batch_asw_df <- dplyr::bind_rows(batch_asw_unintegrated, batch_asw_integrated_list)
+batch_asw_df <- dplyr::bind_rows(batch_asw_unintegrated, batch_asw_integrated_list) %>%
+  dplyr::mutate(library_id = stringr::word(cell_name, -1, sep = "-")) 
 ```
 
 ```{r}
