--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -185,7 +185,7 @@ merged_sce <- sce_list$unintegrated
 
 ### iLISI
 
-The iLISI(local inverse Simpson's index) can be used to measure the local distribution of batches in the integrated dataset. 
+The iLISI (integration local inverse Simpson's index) metric can be used to measure the local distribution of batches in the integrated dataset, as defined in [Korsunksky et al.](https://doi.org/10.1038/s41592-019-0619-0). 
 The iLISI score can be interpreted as describing how many batches are represented within a local neighborhood. 
 The range of iLISI scores will be from 1 to the number of batches, however we have normalized the score following the same method utilized by the `scIB` benchmarking tools: (ilisi - 1)/(num batches -1)
 Therefore, we would expect that well integrated datasets to be close to 1 indicating high mixing of batches, while poorly integrated datasets would be close to 0 indicating poor mixing.
