change figure height and width

--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -155,7 +155,7 @@ if(!is.null(missing_umap)){
 
 ## UMAPs
 
-```{r batch-umaps, fig.height=15, fig.width=10, warning=FALSE}
+```{r batch-umaps, fig.height=15, fig.width=10, warning=FALSE, message=FALSE}
 # create umap plots labeling by batch column
 batch_umaps <- names(sce_list) %>%
   purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
@@ -165,7 +165,7 @@ batch_umaps <- names(sce_list) %>%
 gridExtra::grid.arrange(grobs = batch_umaps, ncol = 2)
 ```
 
-```{r celltype-umaps, fig.width=15, fig.height=20, warning=FALSE}
+```{r celltype-umaps, fig.width=15, fig.height=20, warning=FALSE, message=FALSE}
 # create umap plots labeling by celltype column
 celltype_umaps <- names(sce_list) %>%
   purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
@@ -185,7 +185,7 @@ merged_sce <- sce_list$unintegrated
 
 ### iLISI
 
-The iLISI(local inverse Simpson's index) can be used to measure the local distribution of batches in the integrated dataset. 
+The iLISI (integration local inverse Simpson's index) metric can be used to measure the local distribution of batches in the integrated dataset, as defined in [Korsunksky et al.](https://doi.org/10.1038/s41592-019-0619-0). 
 The iLISI score can be interpreted as describing how many batches are represented within a local neighborhood. 
 The range of iLISI scores will be from 1 to the number of batches, however we have normalized the score following the same method utilized by the `scIB` benchmarking tools: (ilisi - 1)/(num batches -1)
 Therefore, we would expect that well integrated datasets to be close to 1 indicating high mixing of batches, while poorly integrated datasets would be close to 0 indicating poor mixing.
@@ -207,7 +207,7 @@ ilisi_df <- dplyr::bind_rows(ilisi_unintegrated, ilisi_integrated_list)
 ```
 
 
-```{r fig.height=4, fig.width=4}
+```{r fig.height=5, fig.width=5}
 plot_ilisi(ilisi_df)
 ```
 
@@ -374,7 +374,7 @@ pca_integrated_list <- integration_methods %>%
 pca_df <- dplyr::bind_rows(pca_unintegrated, pca_integrated_list)
 ```
 
-```{r, fig.height = 2, fig.width = 4}
+```{r, fig.height = 4, fig.width = 6}
 plot_pca_regression(pca_df, seed = params$seed)
 ```
 
