--- a/analysis_templates/01-single-group-integration-check-template.Rmd
+++ b/analysis_templates/01-single-group-integration-check-template.Rmd
@@ -1,6 +1,6 @@
 ---
 params:
-  group_name: "1M_Immune_Cells"
+  group_name: "AdultHemOrgans"
   merged_sce_dir: "../results/human_cell_atlas/merged_sce"
   integrated_sce_dir: "../results/human_cell_atlas/integrated_sce"
   batch_column: "batch"
@@ -119,10 +119,6 @@ if(!params$batch_column %in% coldata_names){
   stop("Provided batch_column should be present in both the colData of the merged SCE and all integrated SCE objects.")
 }
 
-if(!params$celltype_column %in% coldata_names){
-  stop("Provided celltype_column should be present in both the colData of the merged SCE and all integrated SCE objects.")
-}
-
 
 # check that umaps for pre-integrated and integrated are present
 check_umap_name <- function(sce,
@@ -166,13 +162,24 @@ gridExtra::grid.arrange(grobs = batch_umaps, ncol = 2)
 ```
 
 ```{r celltype-umaps, fig.width=15, fig.height=20, warning=FALSE, message=FALSE}
-# create umap plots labeling by celltype column
+# only print out celltype UMAP plot if celltype information is provided
+if(params$celltype_column %in% coldata_names){
+ # create umap plots labeling by celltype column
 celltype_umaps <- names(sce_list) %>%
   purrr::map(~ plot_integration_umap(sce = sce_list[[.x]],
                                       integration_method = .x,
                                       params$group_name,
                                       cell_label_column = params$celltype_column))
-gridExtra::grid.arrange(grobs = celltype_umaps, ncol = 2)
+gridExtra::grid.arrange(grobs = celltype_umaps, ncol = 2) 
+} else {
+  glue::glue("
+    <div class=\"alert alert-info\">
+    
+    No celltype information found for this dataset.
+    
+    </div>
+  ")
+}
 ```
 
 ## Integration metrics
